fix: change gap into logos in desktop responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,12 @@ nav {
   padding-top: 3rem;
   flex-wrap: wrap;
 }
+@media (min-width: 1440px) {
+  .brands__logos {
+    display: flex;
+    gap: 10.6rem;
+  }
+}
 .brands__logos img {
   transition: filter 0.3s ease;
   cursor: pointer;
